deployment/k8s-componentes-entrega-3.yaml
###################################
# USER-MANAGEMENT - RF007
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
  labels:
    app: user-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management

  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
        - name: user-management
          image: us-docker.pkg.dev/uandes-native-433403/cloud-native-xcode/users_management:1.8
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      volumes:
        - name: appsecrets-volume
          secret:
            secretName: appsecrets
---
kind: Service
apiVersion: v1
metadata:
  name: user-management-service
  annotations:
    cloud.google.com/backend-config: '{"default": "user-management-config"}'  
spec:
  type: NodePort
  selector:
    app: user-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31017
---
###################################
# Credit Card Management - RF006
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf-006
  labels:
    app: rf-006
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf-006

  template:
    metadata:
      labels:
        app: rf-006
    spec:
      serviceAccountName: k8s-datastore-account
      containers:
        - name: rf-006
          image: us-docker.pkg.dev/uandes-native-433403/cloud-native-xcode/rf006:0.0.29
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      volumes:
        - name: appsecrets-volume
          secret:
            secretName: appsecrets
---
kind: Service
apiVersion: v1
metadata:
  name: rf-006-service
  annotations:
    cloud.google.com/backend-config: '{"default": "rf-006-config"}'  
spec:
  type: NodePort
  selector:
    app: rf-006
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31016
